TSP-4-10: Add reset.css to fix padding on mobile

--- a/src/blog/assets/variables.scss
+++ b/src/blog/assets/variables.scss
@@ -7,11 +7,11 @@ $light-text-color: #ababab;
 $backgroud-blog-image-color: rgb(243, 243, 243);
 
 // spacings
-$desktop-container-spacing: 50px;
+$desktop-container-spacing: 30px;
 $desktop-inner-spacing: 40px;
 $desktop-grid-gap: 40px;
 
-$mobile-container-spacing: 20px;
+$mobile-container-spacing: 5px;
 $mobile-inner-spacing: 10px;
 $mobile-grid-gap: 10px;
 
